...
    <string name="ui_conversations_23a085e0" formatted="false">Conversations</string>
    <string name="ui_current_context_349f8670" formatted="false">Current context</string>
    <string name="ui_current_workspace_s_6c60ef34">Current workspace: %1$s</string>
    <string name="ui_dangerous_mode_de499d98" formatted="false">Dangerous mode</string>
    <string name="ui_files_5c80b454" formatted="false">Files</string>
    <string name="ui_high_risk_reconfirmation_required_0a28d24e" formatted="false">High risk: reconfirmation required</string>
    <string name="ui_inspect_covered_originals_0fb5f0e7" formatted="false">Inspect covered originals</string>
    <string name="ui_inspect_request_dd0adbf1" formatted="false">Inspect request</string>
    <string name="ui_loading_b84913a0" formatted="false">Loading…</string>
    <string name="ui_manage_1f04c52a" formatted="false">Manage</string>
    <string name="ui_manage_agent_fbcf94f0" formatted="false">Manage agent</string>
    <string name="ui_manage_agent_workspace_a54c525c" formatted="false">Manage Agent workspace</string>
    <string name="ui_model_44c0cd42" formatted="false">Model</string>
...
